<resources>
    <string name="app_name">Screen Time Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_required">SIGN IN REQUIRED</string>
    <string name="sign_in_required_message">Please sign in to use friend function</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="Date">Date</string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="usage">Usage</string>
    <string name="friend_request">Friend Request</string>
    <string name="search_friend">Search friend</string>
    <string name="accept_request">Accept friend request</string>
    <string name="decline_request">Decline friend request</string>
</resources>